--- a/使用说明.md
+++ b/使用说明.md
@@ -31,7 +31,7 @@ cd SyncServer # 进入项目目录
 
 如果是第一次配置 NodeJS, 需要先进行项目初始化, 在 `SyncPusherServer.js` 所在的目录下执行:
 ```CLI (CMD | PowerShell | Bash)
-node init -y # 自动生成 package.json 文件
+npm init -y # 自动生成 package.json 文件
 ```
 
 3. **获取 Pusher 密钥**
