--- a/使用说明.md
+++ b/使用说明.md
@@ -6,7 +6,7 @@ SyncPusher 是一款开源的 NodeJS 应用, 它可以帮助你使用 Pusher 在
 
 ### 特性：
 
-- **使用简单**: 前端只需要使用 3 个函数, 最少只需要创建 2 行 JS 代码就可以看到数据同步效果
+- **使用简单**: 前端最少只需要使用 2 个函数, 最少只需编写 2 行 JS 代码即可看到数据同步效果
 - **轻量小巧**: 后端只需要 3 个文件, 体积极小, 运行时占用内存极小, 适合在各种服务器环境运行
 - **配置简单**: 只需要快速阅读此教程, 了解使用方法后, 每一处需要填写配置的地方都有详细的注释
 - **兼容性强**: 兼容主流浏览器和各大操作系统, 同时支持选择使用 POST 方式或 GET 方式传输数据
